syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

// CmdId: 263
// EnetChannelId: 0
// EnetIsReliable: true
message SceneTransToPointRsp {
	int32 retcode = 4;
	uint32 scene_id = 11;
	uint32 point_id = 13;
}
